--- a/scss/style.scss
+++ b/scss/style.scss
@@ -4,16 +4,51 @@
 main {
 	width: 100%;
 	height: 100vh;
-	min-width: 1400px;
-	min-height: 720px;
 	background-repeat: no-repeat;
 	background-position: center;
 	background-size: cover;
 	background-image: url(../img/bg_morning.jpg);
 	overflow: hidden;
 
+	&.dark {
+		article p,
+		article em,
+		figure .screen em,
+		figure .screen span {
+			color: #555;
+		}
+	}
+
+	&.morning {
+		background-image: url(../img/bg_morning.jpg);
+		figure {
+			background-image: url(../img/phone_morning.png);
+		}
+	}
+
+	&.afternoon {
+		background-image: url(../img/bg_afternoon.jpg);
+		figure {
+			background-image: url(../img/phone_afternoon.png);
+		}
+	}
+
+	&.evening {
+		background-image: url(../img/bg_evening.jpg);
+		figure {
+			background-image: url(../img/phone_evening.png);
+		}
+	}
+
+	&.night {
+		background-image: url(../img/bg_night.jpg);
+		figure {
+			background-image: url(../img/phone_night.png);
+		}
+	}
+
 	article {
-		width: 40vw;
+		width: 35vw;
 		position: absolute;
 		top: 40vh;
 		left: 5vw;
@@ -36,43 +71,97 @@ main {
 	}
 
 	figure {
-		width: 1000px;
-		height: 600px;
+		width: 1200px;
+		height: 800px;
 		position: absolute;
-		right: -5vw;
-		bottom: -5vh;
+		right: -10vw;
+		top: 50%;
+		margin-top: -200px;
 		background-image: url(../img/phone_morning.png);
+		background-position: right top;
 		background-repeat: no-repeat;
 		background-size: contain;
-		background-position: right top;
-		// border: 1px solid red;
 
 		.screen {
 			width: 534px;
 			height: 301px;
 			position: absolute;
-			top: 43px;
-			left: 125px;
-			font: 50px/301px 'orbitron';
-			text-align: center;
+			top: 98px;
+			left: 132px;
+			font: 60px/301px 'orbitron';
 			color: #fff;
+			text-align: center;
 
 			em {
 				position: absolute;
 				top: 90px;
 				left: 80px;
-				font: 20px/1 'arbitron';
+				font: 20px/1 'orbitron';
 				color: #fff;
 				opacity: 0;
 
 				&.on {
-					opacity: 1;
+					opacity: 0.8;
 				}
 			}
+
 			span {
 				display: inline-block;
 				width: 100px;
 			}
+		}
+	}
+}
+
+@media screen and (max-width: 1600px) {
+	main {
+		figure {
+			transform-origin: right center;
+			transform: scale(0.8);
+			margin-top: -250px;
+		}
+	}
+}
+
+@media screen and (max-width: 1400px) {
+	main {
+		article {
+			width: 25vw;
+
+			p {
+				font-size: 6vw;
+			}
+		}
+	}
+}
+
+@media screen and (max-width: 1200px) {
+	main {
+		article {
+			width: 100%;
+			top: 10vh;
+			left: 0;
+			padding: 10vw;
+		}
+
+		figure {
+			margin-top: -200px;
+			transform: scale(0.7);
+		}
+	}
+}
+
+@media screen and (max-width: 800px) {
+	main {
+		article {
+			top: 0vh;
+			padding: 10vw;
+		}
+
+		figure {
+			margin-top: -200px;
+			transform: scale(0.6);
+			right: -20vw;
 		}
 	}
 }
