--- a/css/style.css
+++ b/css/style.css
@@ -60,6 +60,36 @@ main.night {
 main.night figure {
   background-image: url(../img/phone_night.png);
 }
+main .cl1 {
+  position: absolute;
+  top: -100px;
+  left: 0;
+  opacity: 0;
+  animation: move 40s linear 20s infinite;
+}
+main .cl2 {
+  position: absolute;
+  top: -50px;
+  left: 0;
+  opacity: 0;
+  animation: move 40s linear 0s infinite;
+}
+@keyframes move {
+  0% {
+    opacity: 0;
+    left: -50%;
+  }
+  50% {
+    opacity: 0.5;
+  }
+  95% {
+    opacity: 0.5;
+  }
+  100% {
+    opacity: 0.5;
+    left: -80%;
+  }
+}
 main article {
   width: 35vw;
   position: absolute;
@@ -100,6 +130,23 @@ main figure .screen {
   font: 60px/301px "orbitron";
   color: #fff;
   text-align: center;
+  overflow: hidden;
+}
+main figure .screen .cl1 {
+  width: 600px;
+  position: absolute;
+  top: 30px;
+  left: 0;
+  opacity: 0;
+  animation: move 40s linear 20s infinite;
+}
+main figure .screen .cl2 {
+  width: 700px;
+  position: absolute;
+  top: 20px;
+  left: 0;
+  opacity: 0;
+  animation: move 40s linear 0s infinite;
 }
 main figure .screen em {
   position: absolute;
