--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,5 +1,6 @@
 @import 'reset';
 @import url('https://fonts.googleapis.com/css2?family=Orbitron&display=swap');
+$names: (morning, afternoon, evening, night);
 
 main {
 	width: 100%;
@@ -19,31 +20,65 @@ main {
 		}
 	}
 
-	&.morning {
-		background-image: url(../img/bg_morning.jpg);
-		figure {
-			background-image: url(../img/phone_morning.png);
+	@each $name in $names {
+		&.#{$name} {
+			background-image: url(../img/bg_#{$name}.jpg);
+			figure {
+				background-image: url(../img/phone_#{$name}.png);
+			}
 		}
 	}
 
-	&.afternoon {
-		background-image: url(../img/bg_afternoon.jpg);
-		figure {
-			background-image: url(../img/phone_afternoon.png);
-		}
+	// &.afternoon {
+	// 	background-image: url(../img/bg_afternoon.jpg);
+	// 	figure {
+	// 		background-image: url(../img/phone_afternoon.png);
+	// 	}
+	// }
+
+	// &.evening {
+	// 	background-image: url(../img/bg_evening.jpg);
+	// 	figure {
+	// 		background-image: url(../img/phone_evening.png);
+	// 	}
+	// }
+
+	// &.night {
+	// 	background-image: url(../img/bg_night.jpg);
+	// 	figure {
+	// 		background-image: url(../img/phone_night.png);
+	// 	}
+	// }
+
+	.cl1 {
+		position: absolute;
+		top: -100px;
+		left: 0;
+		opacity: 0;
+		animation: move 40s linear 20s infinite;
+	}
+	.cl2 {
+		position: absolute;
+		top: -50px;
+		left: 0;
+		opacity: 0;
+		animation: move 40s linear 0s infinite;
 	}
 
-	&.evening {
-		background-image: url(../img/bg_evening.jpg);
-		figure {
-			background-image: url(../img/phone_evening.png);
+	@keyframes move {
+		0% {
+			opacity: 0;
+			left: -50%;
 		}
-	}
-
-	&.night {
-		background-image: url(../img/bg_night.jpg);
-		figure {
-			background-image: url(../img/phone_night.png);
+		50% {
+			opacity: 0.5;
+		}
+		95% {
+			opacity: 0.5;
+		}
+		100% {
+			opacity: 0.5;
+			left: -80%;
 		}
 	}
 
@@ -91,6 +126,24 @@ main {
 			font: 60px/301px 'orbitron';
 			color: #fff;
 			text-align: center;
+			overflow: hidden;
+
+			.cl1 {
+				width: 600px;
+				position: absolute;
+				top: 30px;
+				left: 0;
+				opacity: 0;
+				animation: move 40s linear 20s infinite;
+			}
+			.cl2 {
+				width: 700px;
+				position: absolute;
+				top: 20px;
+				left: 0;
+				opacity: 0;
+				animation: move 40s linear 0s infinite;
+			}
 
 			em {
 				position: absolute;
